Prevent users from having multiple instances, and added a first-time-run message that explains where they can access the macro's controls.

--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,6 @@
 {
+    "first_time_running": true,
+    "show_multiple_instances_error": true,
     "selected_profile": "default",
     "profiles": {
         "default": "profiles/default.json"
