--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
-imageio==2.34.0
-Nuitka==2.1.5
-pillow==10.3.0
-pynput==1.7.6
+certifi==2024.7.4
+charset-normalizer==3.3.2
+idna==3.7
+packaging==24.1
+pillow==10.4.0
+pynput==1.7.7
 pystray==0.19.5
+requests==2.32.3
+six==1.16.0
 ttkbootstrap==1.10.1
+urllib3==2.2.2
+Windows-Toasts==1.2.0
+winrt-runtime==2.1.0
+winrt-Windows.Data.Xml.Dom==2.1.0
+winrt-Windows.Foundation==2.1.0
+winrt-Windows.Foundation.Collections==2.1.0
+winrt-Windows.UI.Notifications==2.1.0
