--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+    "version": "1.2.0",
     "first_time_running": true,
     "show_multiple_instances_error": true,
     "selected_profile": "default",
